[package]
name = "v2socks"
version = "0.1.1"
authors = ["ylxdzsw <ylxdzsw@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"
lto = true

[dependencies]
oh-my-rust = { git = "https://github.com/ylxdzsw/oh-my-rust" }
collect_enum = { git = "https://github.com/ylxdzsw/collect_enum" }
rust-crypto = "0.2"
rand = "0.7"